--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "author": "docwali777 <drgauvin@mgmcare.org>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.6"
+    "express": "4.15.3",
+    "react": "15.5.4",
+    "react-bootstrap": "0.31.0",
+    "react-dom": "15.5.4",
+    "react-redux": "5.0.5",
+    "react-router": "3.0.2",
+    "redux": "3.6.0",
+    "redux-logger": "3.0.6"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "webpack": "^2.5.1"
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "webpack": "2.5.1"
   },
   "scripts:": {
     "webpack": "webpack"
